Title spacing issues resolved

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -857,7 +857,7 @@ a.label:hover,a.label:focus,a.badge:hover,a.badge:focus{color:#ffffff;text-decor
 .affix{position:fixed;}
 body{background-color:#ffffff;background-image:url(/static/img/bg-paper.png);background-size:120px 120px;background-repeat:repeat;}
 h1,h2,h3,h4,h5,h6{color:#000000;}
-h2{font-family:"brandon-grotesque",Helvetica,Arial,sans-serif;text-transform:uppercase;line-height:1.2em;margin:0.1em 0 0.8em;padding:0;}h2 .sub-top{margin-top:-0.5em;margin-bottom:-0.5em;font-size:0.6em;display:block;}
+h2{font-family:"brandon-grotesque",Helvetica,Arial,sans-serif;text-transform:uppercase;line-height:1.2em;margin:0.15em 0 0.5em;padding:0;}h2 .sub-top{margin-top:-0.5em;margin-bottom:-0.5em;font-size:0.6em;display:block;}
 h2 .sub-bottom{margin-top:-0.5em;font-size:0.6em;display:block;}
 h3{margin:1.5em 0 0.5em;}
 a{text-decoration:underline;}
@@ -902,7 +902,7 @@ a:hover{text-decoration:none;}
 #calendar .nav li.disabled a,#calendar .nav li.disabled a:hover{color:rgba(153, 153, 153, 0.7);}
 #summary a{color:#666666;}#summary a .pull-right{text-decoration:underline;}
 #summary a:hover{color:#000000;text-decoration:none;}
-#main{width:980px;margin:-6em auto 2em;background-color:#ffffff;padding:0 0 6em;-webkit-box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);-moz-box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);}#main .papertop{height:5px;margin:0 0 2em;background-image:url(/static/img/bg-main-top.png);background-size:21px 5px;background-position:center top;background-repeat:repeat-x;background-color:transparent;background-color:#e6e4e2;}
+#main{width:980px;margin:-6em auto 2em;background-color:#ffffff;padding:0 0 6em;-webkit-box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);-moz-box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);box-shadow:0 2px 2px rgba(0, 0, 0, 0.2);}#main .papertop{height:5px;margin:0 0 1.25em;background-image:url(/static/img/bg-main-top.png);background-size:21px 5px;background-position:center top;background-repeat:repeat-x;background-color:transparent;background-color:#e6e4e2;}
 #content .box{padding:3em 0 4em 0;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;border:1px solid #eeeeee;}
 #content .box-small{padding:1em 0 0.5em 0;}
 #itemlistinfo{position:relative;margin-bottom:0.5em;}#itemlistinfo .filter{position:absolute;top:0.6em;right:0;}
