--- a/static/css/custom.less
+++ b/static/css/custom.less
@@ -17,7 +17,7 @@ h2 {
 	font-family: @headFontFamily;
 	text-transform: uppercase;
 	line-height: 1.2em;
-	margin: 0.1em 0 0.8em;
+	margin: 0.15em 0 0.5em;
 	padding: 0;
 	.sub-top {
 		margin-top: -0.5em;
@@ -283,7 +283,7 @@ a:hover {
 	.box-shadow(0 2px 2px rgba(0,0,0,.2));
 	.papertop {
 		height: 5px;
-		margin: 0 0 2em;
+		margin: 0 0 1.25em;
 		background-image: url(/static/img/bg-main-top.png);
 		background-size: 21px 5px;
 		background-position: center top;
